--- a/src/index.scss
+++ b/src/index.scss
@@ -21,6 +21,11 @@ main {
   }
 }
 
+$feature-flags: (
+  ui-shell: true,
+  grid-columns-16: true,
+);
+
 /// Padding was introduced in 10.3.0, needs an option to let grid set the viewport gutter
 /// @link https://github.com/carbon-design-system/carbon/issues/3010
 .bx--content {
